Handling restaurants and reviews separately, adding 'toggle favorite', background sync

--- a/sass/details-from-600.scss
+++ b/sass/details-from-600.scss
@@ -38,6 +38,9 @@
         width: 40vw;
         overflow: scroll;
     }
+    #map-container {
+        width: 60vw;
+    }
     #map {
         width: 60vw;
         position: absolute;
