--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,20 +17,22 @@
   align-items: center;
   justify-items: center;
   grid-gap: 0.3em;
-  padding: 0.3em;
+  padding: 0.5em;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   max-width: 100%;
   grid-column: 1;
-  grid-row: 1 / 5;
+  grid-row: 2 / 5;
 }
 
-#restaurants-list li h1, #restaurants-list p{
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: 95%;
+#restaurants-list {
+  li h1, p, li h3 {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 95%;
+  }
 }
 
 #restaurants-list li h3 {
@@ -50,10 +52,12 @@
 
 #restaurants-list li a {
   @include button();
+  padding: 10px 30px 10px;
   grid-column: 2;
   border-radius: 5px; /*just to make it less square*/
 }
 
-.stars {
-  color: #A13102;
+button.favButtonGrid {
+  grid-column: 1;
+  grid-row: 1;
 }
