--- a/sass/common.scss
+++ b/sass/common.scss
@@ -29,6 +29,7 @@ h2, h3, h4, h5, h6 {
     text-transform: uppercase;
     border: unset;
     border-radius: 5px; /*just to make it less square*/
+    padding: 10px 15px;
 }
 
 button {
@@ -52,27 +53,7 @@ button.make_favorite {
   background: url('/img/icon/make_favorite.svg') no-repeat;
 }
 
-
-/*-----------------------------Modal dialog--------------------*/
-/* The Modal (background) */
-#modal-background {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+#maincontent, #content {
+  max-width: 100%;
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
