--- a/sass/details-from-600.scss
+++ b/sass/details-from-600.scss
@@ -68,3 +68,10 @@
         width: 1080px;
     }
 }
+
+@media screen and (min-width: 800px) {
+    #modal {
+        width: 400px;
+        left: calc(50% - 200px);
+    }
+}
