--- a/sass/details.scss
+++ b/sass/details.scss
@@ -94,6 +94,7 @@
   #reviews-list li p {
     margin: 10px;
     font-size: 0.8rem;
+    overflow-wrap: break-word;
   }
   #restaurant-hours td {
     color: #666;
@@ -114,5 +115,68 @@
 /* ====================== Main content ============================== */
 #restaurant-img {
   align-self: center;
+}
+
+
+/*-----------------------------Modal dialog--------------------*/
+
+
+/* Modal Content/Box */
+#modal {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 24px;
+  background-color: #fff;
+  z-index: 3; /* places the modal on top of everything */
+  position: fixed;
+  top: 25%;
+  left: 25%;
+  display: none;
+  flex-direction: column;
+
+  input, textarea, label {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  input {
+    margin-bottom: 10px;
+  }
+
+  footer {
+    text-align:right;
+  }
+
+  button#cancel-button {
+    background-color: #333;
+  }
+
+  h1 {
+    color: #165C92;
+  }
+}
+
+/* The Modal (background) */
+#modal-background {
+  display: none; /* Hidden by default */
+  width: 100%;
+  height: 100%;
+  z-index: 2; /* places the modalOverlay between the main page and the modal dialog */
+  background-color: #000;
+  opacity: 0.5;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+}
+
+input:invalid, textarea.invalid {
+  box-shadow: 0 0 5px 1px red;
+}
+
+input:focus:invalid, textarea.invalid:focus {
+  outline: none;
 }
   
